# snpm

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  justfile
snpm-cli/: Cargo.toml
snpm-cli/src/: cli.rs  main.rs
snpm-cli/src/commands/: add.rs  audit.rs  ci.rs  clean.rs  completions.rs  config.rs  dlx.rs  exec.rs  frozen.rs  init.rs  install.rs  licenses.rs  link.rs  list.rs  login.rs  logout.rs  mod.rs  outdated.rs  pack.rs  patch.rs  publish.rs  rebuild.rs  remove.rs  run.rs  store.rs  unlink.rs  upgrade.rs  why.rs  workspace.rs
snpm-cli/src/commands/audit/: config.rs  fix.rs  mod.rs  target.rs
snpm-cli/src/commands/clean/: confirm.rs  mod.rs  options.rs  preview.rs
snpm-cli/src/commands/config/: format.rs  mod.rs  print.rs
snpm-cli/src/commands/login/: auth.rs  mod.rs  prompt.rs
snpm-cli/src/commands/node/: alias.rs  current.rs  default.rs  env.rs  exec.rs  install.rs  list.rs  ls_remote.rs  mod.rs  run.rs  unalias.rs  uninstall.rs  use_cmd.rs  which.rs
snpm-cli/src/commands/patch/: commit.rs  edit.rs  list.rs  mod.rs  project.rs  remove.rs
snpm-cli/src/commands/why/: mod.rs  render.rs  target.rs
snpm-core/: Cargo.toml
snpm-core/src/: cache.rs  config.rs  console.rs  copying.rs  error.rs  http.rs  lib.rs  lifecycle.rs  linker.rs  lockfile.rs  patch.rs  platform.rs  project.rs  registry.rs  resolve.rs  script_env.rs  store.rs  version.rs  workspace.rs  workspace_test.rs
snpm-core/src/cache/: headers.rs  mod.rs  paths.rs
snpm-core/src/cache/metadata/: freshness.rs  mod.rs  storage.rs  tests.rs
snpm-core/src/config/: env_vars.rs  mod.rs  rc.rs
snpm-core/src/config/access/: auth.rs  directories.rs  mod.rs  tests.rs
snpm-core/src/config/rc/: env.rs  mod.rs  types.rs
snpm-core/src/config/runtime/: dirs.rs  env.rs  mod.rs
snpm-core/src/config/types/: config.rs  mod.rs  modes.rs  tests.rs
snpm-core/src/console/: logging.rs  mod.rs  style.rs
snpm-core/src/console/output/: mod.rs  report.rs  status.rs
snpm-core/src/lifecycle/: mod.rs  policy.rs
snpm-core/src/lifecycle/runner/: cache.rs  execute.rs  manifest.rs  mod.rs  remote_cache.rs  walk.rs
snpm-core/src/linker/: bins.rs  fs.rs  hoist.rs  mod.rs  root.rs  selection.rs  virtual_store.rs
snpm-core/src/linker/bins/: bundled.rs  manifest.rs  mod.rs  names.rs  writer.rs
snpm-core/src/linker/fs/: capabilities.rs  copy.rs  link.rs  mod.rs  paths.rs  symlinks.rs
snpm-core/src/lockfile/: keys.rs  matching.rs  mod.rs  types.rs
snpm-core/src/lockfile/compat/: bun.rs  mod.rs  npm.rs  pnpm.rs  yarn.rs
snpm-core/src/lockfile/graph/: mod.rs  packages.rs  root.rs  tests.rs
snpm-core/src/lockfile/io/: binary.rs  mod.rs  read.rs  tests.rs  write.rs
snpm-core/src/node/: aliases.rs  current.rs  discover.rs  exec.rs  index.rs  install.rs  mod.rs  paths.rs  platform.rs  resolve.rs  shell.rs  tests.rs  uninstall.rs
snpm-core/src/operations/: audit.rs  auth.rs  clean.rs  dlx.rs  global.rs  init.rs  install.rs  lazy.rs  licenses.rs  link.rs  mod.rs  pack.rs  patch.rs  publish.rs  rebuild.rs  run.rs  store.rs  why.rs
snpm-core/src/operations/audit/: filter.rs  mod.rs  request.rs
snpm-core/src/operations/auth/: mod.rs  types.rs
snpm-core/src/operations/clean/: execute.rs  mod.rs  scan.rs  types.rs
snpm-core/src/operations/dlx/: execute.rs  mod.rs
snpm-core/src/operations/global/: install.rs  mod.rs  project.rs  remove.rs  shell.rs
snpm-core/src/operations/install/: manifest.rs  mod.rs  overrides.rs  utils.rs  workspace.rs
snpm-core/src/operations/lazy/: manifest.rs  mod.rs  staleness.rs
snpm-core/src/operations/licenses/: collect.rs  mod.rs  parse.rs  tests.rs
snpm-core/src/operations/link/: global.rs  local.rs  mod.rs  symlinks.rs
snpm-core/src/operations/pack/: mod.rs  safety.rs  tarball.rs  tests.rs
snpm-core/src/operations/patch/: inventory.rs  manifest.rs  mod.rs
snpm-core/src/operations/publish/: manifest.rs  mod.rs  payload.rs  request.rs  rewrite.rs
snpm-core/src/operations/run/: exec.rs  filters.rs  mod.rs  process.rs  scripts.rs
snpm-core/src/operations/why/: index.rs  mod.rs  pattern.rs  types.rs
snpm-core/src/patch/: mod.rs  types.rs
snpm-core/src/patch/apply/: mod.rs  (+4 more)
snpm-core/src/platform/: current.rs  matching.rs  mod.rs  tests.rs
snpm-core/src/project/: io.rs  manifest.rs  mod.rs  package_json.rs  tests.rs
snpm-core/src/protocols/: file.rs  git.rs  jsr.rs  mod.rs  npm.rs
snpm-core/src/registry/: types.rs
snpm-core/src/resolve/: mod.rs  peers.rs  query.rs  types.rs
snpm-core/src/store/: cache_index.rs  ensure.rs  fetch.rs  integrity.rs  limits.rs  local.rs  metadata.rs  mod.rs  remote.rs
snpm-core/src/version/: mod.rs  ranges.rs  select.rs  tests.rs
snpm-core/src/workspace/: discovery.rs  types.rs
snpm-switch/: Cargo.toml
snpm-switch/src/: config.rs  main.rs  manifest.rs  selection.rs  version.rs
snpm-switch/src/cli/: flags.rs  mod.rs  parse.rs  tests.rs
snpm-switch/src/runtime/: binary.rs  mod.rs
snpm-switch/src/version/: cache.rs  download.rs  ensure.rs  extract.rs  mod.rs  platform.rs  tests.rs
(+262 files in other folders)
