[workspace]
members = ["snpm-core", "snpm-cli", "snpm-semver"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = "1.39"
#
# # ───────────────────────────────────────
# # Compilation profiles
# [profile.release]
# lto = "fat"
# codegen-units = 1
# strip = "symbols"
# panic = "abort"
#
# [profile.dev]
# debug = 0
# split-debuginfo = "unpacked"
# strip = "debuginfo"
#
