[workspace]
members = ["snpm-core", "snpm-cli", "snpm-semver", "snpm-switch"]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/binbandit/snpm"
homepage = "https://snpm.io"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = "1.49"
tikv-jemallocator = "0.6"

# ───────────────────────────────────────
# Compilation profiles
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
debug = 0
split-debuginfo = "unpacked"
strip = "debuginfo"

# Release-like build with debuginfo + frame pointers preserved, used for
# profiling with `samply` / `cargo flamegraph`. LTO is off so symbol
# names survive demangling; opt-level=3 keeps perf realistic.
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"
lto = "off"
codegen-units = 16
