[package]
name = "snpm-cli"
version = "2026.3.23"
edition = "2024"
license.workspace = true
repository.workspace = true

[[bin]]
name = "snpm"
path = "src/main.rs"

[dependencies]
snpm-core = { path = "../snpm-core" }
clap = { version = "4", features = ["derive"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
open = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7"
