[package]
name = "snpm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
directories = "6.0.0"
serde_json = "1.0.145"
thiserror.workspace = true
reqwest = { version = "0.12", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls-tls",
] }
tar = "0.4"
flate2 = { version = "1.0" }
serde_yaml = "0.9.34"
async-recursion = "1.1"
futures = "0.3"
glob = "0.3"
time = { version = "0.3", features = ["parsing"] }
snpm-semver = { path = "../snpm-semver" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
