[package]
name = "snpm-core"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
directories = "6.0.0"
serde_json = "1.0.145"
rayon = "1.8"
thiserror.workspace = true
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "rustls",
    "http2",
] }
tar = "0.4"
flate2 = { version = "1.0" }
serde_yaml = "0.9.34"
async-recursion = "1.1"
futures = "0.3"
glob = "0.3"
time = { version = "0.3", features = ["parsing"] }
snpm-semver = { path = "../snpm-semver" }
tokio = { workspace = true, features = ["full"] }
tempfile = "3.23.0"
