[package]
name = "snpm-switch"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true
description = "Version manager for snpm - automatically uses the correct snpm version for your project"

[[bin]]
name = "snpm-switch"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
dirs = "6.0"
flate2 = "1.1"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tar = "0.4"
zip = "8.1"
